<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geotracks</string>

    <string-array name="action_list">
        <item>Map</item>
        <item>Links</item>
    </string-array>

    <!-- Form text -->
    <string name="new_share_link_title">Share your location</string>
    <string name="share_link_description">Heading out. Track me on Geoloqi!</string>

    <!-- Button text -->
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_in_button">Sign In</string>

    <!-- Notifications -->
    <string name="foreground_ticker">Starting the location service&#8230;</string>
    <string name="foreground_title">Tracking your location</string>
    <string name="foreground_text">Touch to configure the location tracker.</string>

    <!-- Dialogs -->
    <string name="loading_message">Loading, please wait&#8230;</string>
    <string name="authenticating_message">Authenticating, please wait&#8230;</string>
    <string name="dialog_gps_title">GPS is Disabled</string>
    <string name="dialog_gps_message">You should enable GPS to make sure your geonotes are received.</string>
    <string name="share_link_dialog_title">Share link to&#8230;</string>

    <!-- Activity titles -->
    <string name="settings_title">Settings</string>

    <!-- Lists -->
    <string name="empty_link_list">You haven\'t shared your location yet.</string>

    <!-- Menu items -->
    <string name="menu_center_map_title">Center map</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_link_deactivate">Disable link</string>
    <string name="menu_link_share">Send link</string>
    <string name="menu_link_export">Export data</string>

    <!-- Preference category titles -->
    <string name="general_category_title">General</string>
    <string name="tracking_category_title">Location</string>
    <string name="notification_category_title">Notifications</string>
    <string name="account_category_title">Account</string>
    <string name="about_category_title">About</string>

    <!-- Preference keys -->
    <string name="pref_key_tracker_status">tracker_status</string>
    <string name="pref_key_real_time">start_on_boot</string>
    <string name="pref_key_account_username">account_username</string>
    <string name="pref_key_app_version">app_version</string>
    <string name="pref_key_app_build">app_build</string>
    <string name="pref_key_sdk_version">sdk_version</string>
    <string name="pref_key_sdk_build">sdk_build</string>
    <string name="pref_key_privacy_policy">privacy_policy</string>

    <!-- Preference titles -->
    <string name="tracker_status_title">Track location</string>
    <string name="real_time_title">Real-time tracking</string>
    <string name="username_title">Sign in</string>
    <string name="app_version_title">App version</string>
    <string name="app_build_title">App build</string>
    <string name="sdk_version_title">SDK version</string>
    <string name="sdk_build_title">SDK build</string>
    <string name="privacy_policy_title">Privacy Policy</string>

    <!-- Preference summaries -->
    <string name="real_time_summary">Updates may be lost on unreliable network connections!</string>
    <string name="user_account_summary">Sign in as another user?</string>

    <!-- Error messages -->
    <string name="invalid_email_error">Please enter a valid e-mail.</string>
    <string name="invalid_password_error">Please enter a valid password.</string>
    <string name="invalid_form_error">All fields are required!</string>
    <string name="invalid_message_error">Please enter a valid message!</string>

    <!-- Misc. copy -->
    <string name="anonymous_account_message">You\'re using Geoloqi anonymously.</string>
    <string name="existing_user_message">Already a Geoloqi user?</string>
    <string name="new_user_message">Need a Geoloqi account?</string>
    <string name="sign_up_title">Sign-Up</string>
    <string name="sign_in_title">Sign-In</string>
    <string name="new_geonote_title">New Geonote</string>
    <string name="sharing_details">
        Create a unique link to share your location with a friend! Your
        location can be viewed in a web browser by anyone with access to
        the link.\n\nYou can deactivate the link at any time using
        the mobile app, or by visiting the Geoloqi website. You can also
        disable the tracker from the application settings, which will
        prevent your active links from accessing your current location.
    </string>

    <!-- Default strings -->
    <string name="short_lorem">Lorem ipsum dolor sit amet</string>
    <string name="long_lorem">consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>