<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#F2F2F2"
            android:padding="20dp"
            android:text="@string/new_share_link_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#444"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:singleLine="false"
                android:text="@string/share_link_description" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Submit" />
        </LinearLayout>

        <!-- Horizontal rule -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCC" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sharing_details"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>